Test_1/Markdown_file.txt
**First Step Of installing Tiny troupe and checking whether everything is working or not. Also added Lisa as data scientist for testing purpose**

@aditya19111 ➜ /workspaces/Tiny_Troupe (main) $ pip install openai
Requirement already satisfied: openai in /usr/local/python/3.12.1/lib/python3.12/site-packages (1.67.0)
Requirement already satisfied: anyio<5,>=3.5.0 in /home/codespace/.local/lib/python3.12/site-packages (from openai) (4.7.0)
Requirement already satisfied: distro<2,>=1.7.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from openai) (1.9.0)
Requirement already satisfied: httpx<1,>=0.23.0 in /home/codespace/.local/lib/python3.12/site-packages (from openai) (0.28.1)
Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from openai) (0.9.0)
Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from openai) (2.10.6)
Requirement already satisfied: sniffio in /home/codespace/.local/lib/python3.12/site-packages (from openai) (1.3.1)
Requirement already satisfied: tqdm>4 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from openai) (4.67.1)
Requirement already satisfied: typing-extensions<5,>=4.11 in /home/codespace/.local/lib/python3.12/site-packages (from openai) (4.12.2)
Requirement already satisfied: idna>=2.8 in /home/codespace/.local/lib/python3.12/site-packages (from anyio<5,>=3.5.0->openai) (3.10)
Requirement already satisfied: certifi in /home/codespace/.local/lib/python3.12/site-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)
Requirement already satisfied: httpcore==1.* in /home/codespace/.local/lib/python3.12/site-packages (from httpx<1,>=0.23.0->openai) (1.0.7)
Requirement already satisfied: h11<0.15,>=0.13 in /home/codespace/.local/lib/python3.12/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)
Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)
Requirement already satisfied: pydantic-core==2.27.2 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from pydantic<3,>=1.9.0->openai) (2.27.2)

[notice] A new release of pip is available: 24.3.1 -> 25.0.1
[notice] To update, run: python3 -m pip install --upgrade pip
@aditya19111 ➜ /workspaces/Tiny_Troupe (main) $ export OPENAI_API_KEY="Removed my api key for security purpose you can add yours here"
@aditya19111 ➜ /workspaces/Tiny_Troupe (main) $ python
Python 3.12.1 (main, Dec 12 2024, 22:30:56) [GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> pip install openai
  File "<stdin>", line 1
    pip install openai
        ^^^^^^^
SyntaxError: invalid syntax
>>> pip install openai
  File "<stdin>", line 1
    pip install openai
        ^^^^^^^
SyntaxError: invalid syntax
>>> from tinytroupe.examples import create_lisa_the_data_scientist
Looking for default config on: /usr/local/python/3.12.1/lib/python3.12/site-packages/tinytroupe/utils/../config.ini
Failed to find custom config on: /workspaces/Tiny_Troupe/config.ini
Will use only default values. IF THINGS FAIL, TRY CUSTOMIZING MODEL, API TYPE, etc.

!!!!
DISCLAIMER: TinyTroupe relies on Artificial Intelligence (AI) models to generate content. 
The AI models are not perfect and may produce inappropriate or inacurate results. 
For any serious or consequential use, please review the generated content before using it.
!!!!


=================================
Current TinyTroupe configuration 
=================================
[OpenAI]
api_type = openai
azure_api_version = 2023-05-15
model = gpt-4o-mini
max_tokens = 4000
temperature = 1.2
freq_penalty = 0.0
presence_penalty = 0.0
timeout = 60
max_attempts = 5
waiting_time = 1
exponential_backoff_factor = 5
embedding_model = text-embedding-3-small
cache_api_calls = False
cache_file_name = openai_api_cache.pickle
max_content_display_length = 1024

[Simulation]
rai_harmful_content_prevention = True
rai_copyright_infringement_prevention = True

[Logging]
loglevel = ERROR

                                          
lisa_ds = create_lisa_the_data_scientist()>>> 
>>> lisa_ds = create_lisa_the_data_scientist()
>>> lisa_ds.listen_and_act("Tell me about your life.")
USER --> Lisa Carter: [CONVERSATION] 
          > Tell me about your life.
Lisa Carter acts: [THINK] 
                 > The question about my life is quite broad. I should think about the key aspects
                 > to share, like my background, education, and current job.
Lisa Carter acts: [TALK] 
                 > Sure! I grew up in Vancouver, Canada, in a tech-savvy family. My parents were
                 > software engineers, which inspired my interest in technology from a young age. I
                 > pursued a Master's in Data Science at the University of Toronto, focusing on
                 > improving search relevance using context-aware models. Now, I work as a Data
                 > Scientist at Microsoft in the M365 Search team, where I analyze user behavior to
                 > enhance search results. I also enjoy cooking, playing the piano, and watching
                 > movies in my free time.
Lisa Carter acts: [DONE] 

** Now creating new agents/personas and recording the conversation for few of them **

1) Aditya (Myself):-
>>> from tinytroupe.agent import TinyPerson
>>> aditya = TinyPerson("Aditya")
>>> aditya.define("age",27)
>>> aditya.define("nationality","indian")
>>> aditya.define("occupation","Data Engineer")
>>> aditya.degine("professional_history","Aditya Bhavsar has been in the AI/ML space since 2014, designing and deploying AI-driven solutions across Machine Learning, NLP, Cloud Computing, and Big Data. With expertise in Large Language Models (LLMs), Generative AI, and scalable data workflows, Aditya specializes in building production-ready AI systems and optimizing data-driven decision-making")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'TinyPerson' object has no attribute 'degine'. Did you mean: 'define'?
>>> aditya.define("professional_history","Aditya Bhavsar has been in the AI/ML space since 2014, designing and deploying AI-driven solutions across Machine Learning, NLP, Cloud Computing, and Big Data. With expertise in Large Language Models (LLMs), Generative AI, and scalable data workflows, Aditya specializes in building production-ready AI systems and optimizing data-driven decision-making")
>>> aditya.listen_and_act("whats your favourite part in data engineering?")
USER --> Aditya: [CONVERSATION] 
          > whats your favourite part in data engineering?
Aditya acts: [THINK] 
            > I need to think about what my favorite part of data engineering is. I enjoy working
            > with data pipelines and optimizing workflows, but I also love the challenge of solving
            > complex problems with data.
Aditya acts: [TALK] 
            > I think my favorite part of data engineering is building and optimizing data
            > pipelines. It's really satisfying to see how efficient workflows can transform raw
            > data into valuable insights. What about you?
Aditya acts: [DONE] 

2)
